<resources>
    <string name="app_name">FLP</string>
    <string name="interstical1">ca-app-pub-7796514960574688/5597341535</string>
    <string name="interstical2">ca-app-pub-7796514960574688/2971178190</string>
    <string name="interstical3">ca-app-pub-7796514960574688/9345014851</string>
    <string name="interstical4">ca-app-pub-7796514960574688/8031933181</string>
    <string name="interstical5">ca-app-pub-7796514960574688/6718851515</string>
    <string name="interstical6">ca-app-pub-7796514960574688/4442319764</string>
    <string name="maincompany">Forever Living Products Pvt. Ltd.</string>
    <string name="approval_list">Forever Living Products Certificates List</string>
    <string name="approved_org_list">* IASC – International Aloe Science Council.\n * Leaping Bunny | Respect for Animal Rights.\n * NSF Safety and Quality Certification.\n * ISO 14001:2004 - Environmental Management Systems.\n * ISO 9001:2000 Quality Management System.\n * OHSAS 18001- Health And Safety Standard.\n * Kosher organization.\n * IDSA (The Indian Direct Selling Association).\n (85% Aloe Vera And Bee Honey sold in all over world\n World leader in Aloe Vera and Bee Hive)</string>
    <string name="ranks_benefits">How To Achieve Ranks and Benefits from it</string>
    <string name="company_detials">Company Detials</string>
    <string name="flp_history">* Forever Living Products Pvt. Ltd. started in 1978, Scottsdale, Arizona, United States (USA).\n * 42 years old company. \n * Started with Aloe Vera Drink, today it sell 200+ products world wide.\n * Self Aloe Vera Field 8,000 Acre plus Bee Hive.\n * World Wide 168+ countries.\n * Totally cash Rich Company moreover no Share Holder.\n * Forever Living Products Pvt. Ltd. entered to Indian on September 2000.\n \n \n</string>
    <string name="company_history">Company History</string>
    <string name="about_company">Know More About Company</string>
    <string name="approval_world_wide">Number of Approval World Wide</string>
    <string name="types_of_income">Forever Living Products Pvt. Ltd. \n Gives 10 types of income</string>
    <string name="profits_list">* Retails Profit (15% To 48%).\n * Automatic Profit (20% to 33%).\n * Personal Bonus (5% to 18% ).\n * Volume Bonus (3% to 13%).\n * Leadership Bonus.\n * Gem Bonus.\n * Car Plan / Home Plane.\n * Tours (Domestic Tour MR And International Tour EMR).\n * Global Rally.\n * Chairman Bonus/ Profit Share.\n(Diwali Bonus)\n</string>
    <string name="ranking_detials">We are a large group of industry, through which we provide you all to be the part of upcoming future Industry which is already working in 168+countries, and as well as working in India from past 18 years.We provide you the best business which you can start with less amount of investment on your own approx(1000)rs,in which we will provide you.(Free Training),(Free personality development),(Free Joining for Life Time), (With no risk),(No Targets) etc etc you will work as your OWN BOSS!! For more information you can contact me as soon as possible.\n\n NOTE:_ THIS OPPORTUNITY IS SPECIALLY FOR THOSE HOW HAVE THE COURAGE TO QUIT THERE COMFORT ZONE FOR THEIR BETTER LIFE STYLE.</string>
    <string name="cc_detial_list">PRICE AND CASE CREDIT(CC) IN INDIA</string>
    <string name="assistant_sup_detials">ASSISTANT SUPERVISOR:\n Once you make 2cc in 2 consecutive months, you are promoted to this level. You get 43% Retail profits, now at this stage you should start making members under you that is you can sponsor and build your own downline. You get 5% bonus on retail sales. You and your members that are under you, together should have sales of 25CC in 2 consecutive months, so then our Company promotes you to the next level. Here also you and your members together can sell 25CC in your own time. Remember Our Company doesn’t make you TIME BOUND. You decide the TIME you need to reach to YOUR GOALS. \n</string>
    <string name="supervisor_detials">SUPERVISOR:\n After selling 25CC products at ASSISTANT SUPERVISOR LEVEL you are promoted at this position. You get 43% retail profit plus 8% bonus on personal retail sales plus 3% bonus on Assistant Supervisor group retail sales,(when you become a SUPERVISOR, then members under you who have sold 2cc in 2 consecutive months will become ASSISTANT SUPERVISOR under you and you get 3% bonus on each of these ASSISTANT SUPERVISOR’S GROUP RETAIL SALES because these ASSISTANT SUPERVISORS have made members and all of these ASSISTANT SUPERVISOR along with their members are under you). Continue sponsoring and building your downline so that you have more members and as a result MORE EARNINGS. DON’T FORGET AT EVERY STAGE YOU MUST ATTEND PRESENTATIONS TO UNDERSTAND THE BENEFITS OF EVERY PRODUCT AND TO UNDERSTAND OUR MARKETING PLAN. At this stage you along with your new members, assistant supervisors and their members, must sell 75CC products in 2 consecutive months to get promoted. As we mentioned earlier, you and your downline can sell 75CC products in any 2consecutive months as per your convenience.</string>
    <string name="assistant_manager_detials">ASSISTANT MANAGER:\n After you and your downline, which included assistant supervisors, and their members; sold 75CC products then you are promoted at the position of the ASSISTANT MANAGER who has several downlines of supervisors, with their members and the assistant supervisors and their members. you get 43% retail profit. plus 13% bonus on Personal retail sales. plus 5% bonus on Supervisor Group retail sales. plus 8% bonus on Assistant Supervisor Group retail sales. Please note that after the completion of 2CC sale of products at the distributor level you are entitled to make any number of members under you, so it is clear that you need not have just one downline with one supervisor and one assistant supervisor, like the other MLMs. You might have many downlines with several supervisors and members under you. So in that way you get more earnings from every downline that you have under you. \n</string>
    <string name="manager_detials">MANAGER:\n This is the highest position you can achieve after you and your downline together accomplish the sales of 120 CC in any two consecutive months.\n At this position you get 43% retail profit.\n plus 18% bonus on personal retail sales.\n plus 5% bonus on Assistant manager’s group retail sales.\n plus 10% bonus on supervisor’s group retail sales.\n plus 13% bonus on Assistant supervisor’s group retail sales.\n so this was the marketing plan that FLP has to offer you, now that you have read , you can either try our outstanding products because they DON’T MEET BUT BEAT THE COMPETITION! or you can apply to do the business and change the lives of thousands who start earning in our unique marketing plan. Or you can do both, buy products for yourselves as well as do the business. \n</string>
    <string name="joining_process">Joining or Starting with FLP</string>
    <string name="types_of_joining">Their are two ways to join Forever Living Products PVT. LTD. \n 1st Online through agent Sponsor.\n 2nd Offline(Need to fill up a form which cost Rs. 25 available at our FLP Offices.)\n Joining required following documents both online or offline.\n * Email Id.\n * Phone Number.\n * PAN CARD.\n * Address Proof. (Aadhar Card, Voter Card).\n</string>
    <string name="base_plane"><![CDATA[>> Buy RS 1000+ Products and be Novus Customer of FLP.\n >> Once we have received these documents, your application ID will become ‘ACTIVE’. \n >> After this purchases in your name with your exclusive and unique 12-Digit Forever Business Owner (FBO).\n]]></string>
    <string name="distributor_detials">DISTRIBUTOR\n If you are interested in our products and want to be a member of our Company, then you must fill out an application form that we will send you to the address that you furnish to us. Then you become our DISTRIBUTOR.\n There is NO COST TO JOIN. There is NO INVESTMENT AT ALL\n You get 43% Retail Profit if you sell our products after joining our company.\n You must sell 2cc products so that you can jump to the HIGHER LEVEL.\n YOU must be wondering what is cc? CC stands for CASE CREDIT. Every product in our company has points, these are called CC.For example-Aloe Vera Gel in our company has 0.09cc, Forever Bright Tooth gel has 0.029cc etc. Adding up all the products you sold (considering their CC) you must complete 2CC in order to jump to HIGHER LEVEL. Also our company gives you 2 consecutive months to complete 2CC sales.\n For example-you sell 1CC in January and 1CC in February then you can jump to the HIGHER LEVEL. Just in case you sell 1CC in January and 0.5CC products in February then, you are given another chance in March (considering the CC of February). Lets say that you couldn’t sell 2CC in February and March also, then FLP gives you your time to sell 2CC products to reach YOUR HIGHER LEVEL, considering two consecutive months only. You might even sell 2CC products in 1month itself and get promoted. \nThere is no hard and fast rule that you sell 2CC in a stipulated time. You might take your own time to get to a HIGHER LEVEL. \n</string>

    <string name="rank_bannner">ca-app-pub-7796514960574688/7269515852</string>
    <string name="rank_banner2">ca-app-pub-7796514960574688/9672317916</string>
    <string name="approval_bnr1">ca-app-pub-7796514960574688/4605971293</string>
    <string name="approval_bnr2">ca-app-pub-7796514960574688/2831577397</string>
    <string name="benefit_bnr1">ca-app-pub-7796514960574688/4615432358</string>
    <string name="benefit_bnr2">ca-app-pub-7796514960574688/6579250713</string>
    <string name="history_bnr1">ca-app-pub-7796514960574688/3302350685</string>
    <string name="home_bnr1">ca-app-pub-7796514960574688/9666726281</string>
    <string name="markating_bnr1">ca-app-pub-7796514960574688/9676187349</string>
    <string name="markating_bnr2">ca-app-pub-7796514960574688/1788236261</string>
    <string name="starting_bnr1">ca-app-pub-7796514960574688/7818689504</string>
    <string name="starting_bnr2">ca-app-pub-7796514960574688/7628361088</string>
</resources>
