<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/layout"
    tools:context=".approval_flp">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/approval_bnr1"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/maincompany"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24dp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivhistory"
                android:layout_width="match_parent"
                android:layout_height="248dp"
                android:layout_marginLeft="2dp"

                android:layout_marginTop="2dp"
                android:layout_marginRight="2dp"
                android:gravity="center_horizontal"
                android:src="@drawable/logos"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="32dp" />

            <TextView
                android:id="@+id/tvdetials"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="20dp"
                android:gravity="center_horizontal"
                android:text="@string/approval_list"
                android:textColor="#673AB7"
                android:textSize="24dp"
                android:textStyle="bold" />
            <MultiAutoCompleteTextView
                android:layout_width="wrap_content"
                android:textSize="20dp"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:lineSpacingExtra="2dp"
                android:layout_height="match_parent"
                android:text="@string/approved_org_list" />

            <ImageView
                android:id="@+id/imidsa"
                android:layout_width="match_parent"
                android:layout_height="248dp"
                android:layout_marginLeft="2dp"

                android:layout_marginTop="2dp"
                android:layout_marginRight="2dp"
                android:gravity="center_horizontal"
                android:src="@drawable/idsa"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="32dp" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/approval_bnr2"
                tools:ignore="MissingConstraints" />



        </LinearLayout>

    </ScrollView>

</LinearLayout>