<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/layout"
    tools:context=".history_flp"
    xmlns:ads="http://schemas.android.com/apk/res-auto">
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/maincompany"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24dp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv4.1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"

                android:layout_marginTop="2dp"
                android:layout_marginRight="2dp"
                android:gravity="center_horizontal"
                android:src="@drawable/unnamed"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="32dp" />

            <TextView
                android:id="@+id/tv4.1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="20dp"
                android:fontFamily="arial"
                android:gravity="center_horizontal"
                android:text="@string/joining_process"
                android:textColor="#FFEB3B"
                android:textSize="26dp"
                android:textStyle="normal|bold|italic" />

            <MultiAutoCompleteTextView
                android:layout_width="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:layout_height="match_parent"
                android:lineSpacingExtra="2dp"
                android:text="@string/types_of_joining"
                android:textColor="#A31C4A"
                android:textSize="24sp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/im4.2"
                android:layout_width="match_parent"
                android:layout_height="248dp"
                android:layout_marginLeft="2dp"

                android:layout_marginTop="2dp"
                android:layout_marginRight="2dp"
                android:gravity="center_horizontal"
                android:src="@drawable/mrtinluthr"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="32dp" />

            <MultiAutoCompleteTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:lineSpacingExtra="2dp"
                android:text="@string/base_plane"
                android:textColor="#FF5722"
                android:textSize="22dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/im4.3"
                android:layout_width="match_parent"
                android:layout_height="248dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="2dp"
                android:gravity="center_horizontal"
                android:src="@drawable/motivationpl"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="32dp" />

            <ImageView
                android:id="@+id/im4.4"
                android:layout_width="match_parent"
                android:layout_height="248dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="2dp"
                android:gravity="center_horizontal"
                android:src="@drawable/team"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="32dp" />
            <MultiAutoCompleteTextView
                android:layout_width="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:layout_height="match_parent"
                android:lineSpacingExtra="2dp"
                android:text="@string/distributor_detials"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />
            <ImageView
                android:id="@+id/im4.10"
                android:layout_width="match_parent"
                android:layout_height="248dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="2dp"
                android:gravity="center_horizontal"
                android:src="@drawable/planecompanyrank"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="32dp" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView2"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
                tools:ignore="MissingConstraints" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>